Use 100dvh and prevent body scroll for native app feel on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -113,18 +113,26 @@
     font-variation-settings: var(--default-font-variation-settings, normal);
     -webkit-tap-highlight-color: transparent;
     height: 100%;
+    height: 100dvh;
+    overflow: hidden;
   }
 
   body {
     line-height: inherit;
     height: 100%;
+    height: 100dvh;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    background-color: #2474bb;
   }
 
   #root {
     height: 100%;
+    height: 100dvh;
     width: 100%;
+    overflow: hidden;
+    background-color: #2474bb;
   }
 
   hr {
